--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p class="animate__rotateInUpRight animate__animated animate__delay-1s">
               El muñeco daruma (達磨) es uno de los amuletos japoneses más conocidos, un muñeco de los propósitos hecho a mano que nos ayuda a conseguir todo aquello que nos propongamos.
             </p>
-            <button type="button" class="btn btn-primary animate__flipInX animate__animated animate__delay-2s"><a href="subtitulos/daruma.html" style="color: white">Ver más</a></button>
+            <button type="button" class="btn btn-primary animate__flipInX animate__animated animate__delay-2s"><a href="subtitulos/daruma.html">Ver más</a></button>
           </article>
         </div>
       </section>
@@ -87,7 +87,7 @@
             <div class="card-body">
               <h5 class="card-title opacity">Amor</h5>
               <p class="card-text opacity">Rennai Jouju</p>
-              <a href="subtitulos/omamori.html" class="btn btn-primary opacity">Ver más</a>
+              <a href="subtitulos/omamori.html" class="btn btn-primary">Ver más</a>
             </div>
           </div>
           <div data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="3000" class="card col col-12 col-md6" style="width: 18rem">
@@ -115,7 +115,7 @@
           <article data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="300" class="col col-12 col-md-6 sectionTres__texto">
             <h2>Clases de Japonés</h2>
             <p>Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
-            <button type="button" class="btn btn-success"><a href="subtitulos/japones.html">Ver más</a></button>
+            <button type="button" class="btn btn-primary"><a href="subtitulos/japones.html">Ver más</a></button>
           </article>
           <div data-aos="zoom-in-left" data-aos-duration="1000" data-aos-delay="300" class="col col-12 col-md-6 sectionTres__imagen"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
         </div>
