arregle los breakpoints para que se haga mas responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   </head>
   <body>
     <header>
-      <!-- #40b0e4 -->
       <!--       NAV         -->
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
@@ -66,10 +65,10 @@
       <!--        PRIMER SECTION      -->
       <section class="container-fluid sectionUno">
         <div class="row">
-          <div class="col col-12 col-md-6 sectionUno__imagen animate__rotateInDownLeft animate__animated animate__delay-1s">
-            <img src="imagenes/daruma-rojo.png" width="100%" alt="Daruma rojo" />
+          <div class="col col-12 col-md-5 col-sm-12 sectionUno__imagen animate__rotateInDownLeft animate__animated animate__delay-1s">
+            <img src="imagenes/daruma-rojo.png" alt="Daruma rojo" />
           </div>
-          <article class="col col-12 col-md-6 sectionUno__texto">
+          <article class="col col-12 col-md-7 col-sm-12 sectionUno__texto">
             <h1 data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">Daruma</h1>
             <p class="animate__rotateInUpRight animate__animated animate__delay-1s">
               El muñeco daruma (達磨) es uno de los amuletos japoneses más conocidos, un muñeco de los propósitos hecho a mano que nos ayuda a conseguir todo aquello que nos propongamos.
@@ -81,43 +80,27 @@
       <!--       SEGUNDO SECTION      -->
       <section class="container-fluid sectionDos">
         <div class="row">
-          <div data-aos="fade-right" data-aos-duration="1000" data-aos-delay="250" class="sectionDos__titulo"><h1>Omamori</h1></div>
-          <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="3000" class="card col col-12 col-md6" style="width: 18rem">
-            <img src="imagenes/amuleto-amor.png" class="card-img-top opacity" alt="Amuleto rosa " />
-            <div class="card-body">
-              <h5 class="card-title opacity">Amor</h5>
-              <p class="card-text opacity">Rennai Jouju</p>
-              <a href="subtitulos/omamori.html" class="btn btn-primary">Ver más</a>
+          <article class="col col-12 col-md-8 col-sm-12 sectionDos__texto">
+            <div class="sectionDos__titulo" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100"><h1>Omamori</h1></div>
+            <p data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="300">Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
+            <div class="sectionDos__boton">
+              <button type="button" class="btn btn-primary animate__flipInX animate__animated animate__delay-2s"><a href="subtitulos/omamori.html">Ver más</a></button>
             </div>
-          </div>
-          <div data-aos="flip-up" data-aos-easing="ease-out-cubic" data-aos-duration="3000" class="card col col-12 col-md6" style="width: 18rem">
-            <img src="imagenes/amuleto-estudio.png" class="card-img-top" alt="Amuleto violeta con rayas doradas" />
-            <div class="card-body">
-              <h5 class="card-title">Estudio</h5>
-              <p class="card-text">Gakugyou</p>
-              <a href="subtitulos/omamori.html" class="btn btn-primary">Ver más</a>
-            </div>
-          </div>
-          <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="3000" class="card col col-12 col-md6" style="width: 18rem">
-            <img src="imagenes/amuleto-familia.png" class="card-img-top" alt="Amuleto dorado y rojo" />
-            <div class="card-body">
-              <h5 class="card-title">Familia</h5>
-              <p class="card-text">Kanai Anzen</p>
-              <a href="subtitulos/omamori.html" class="btn btn-primary">Ver más</a>
-            </div>
+          </article>
+          <div class="col col-12 col-md-4 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+            <img src="imagenes/amuleto-amor.png" alt="Amuleto amor" />
           </div>
         </div>
       </section>
       <!--        TERCER SECTION       -->
       <section class="container-fluid sectionTres">
         <div class="row">
-          <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="250" class="sectionTres__titulo"><h1>Eventos</h1></div>
-          <article data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="300" class="col col-12 col-md-6 sectionTres__texto">
-            <h2>Clases de Japonés</h2>
-            <p>Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
-            <button type="button" class="btn btn-primary"><a href="subtitulos/japones.html">Ver más</a></button>
+          <div class="col col-12 col-md-6 col-sm-12 sectionTres__imagen" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="500"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
+          <article class="col col-12 col-md-6 col-sm-12 sectionTres__texto">
+            <div class="sectionTres__titulo" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100"><h1>Japones</h1></div>
+            <p data-aos="zoom-in-left" data-aos-duration="1000" data-aos-delay="500">Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
+            <button type="button" class="btn btn-primary animate__flipInX animate__animated animate__delay-2s"><a href="subtitulos/japones.html">Ver más</a></button>
           </article>
-          <div data-aos="zoom-in-left" data-aos-duration="1000" data-aos-delay="300" class="col col-12 col-md-6 sectionTres__imagen"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
         </div>
       </section>
     </main>
