--- a/nosotros.html
+++ b/nosotros.html
@@ -75,20 +75,20 @@
       </div>
       <!--      CARDS      -->
       <div class="container nosotros__cards">
-        <div class="row">
-          <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="col-md-6">
+        <div class="row tarjeta">
+          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 tarjeta__clases" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <div class="card">
               <div class="card-body">
-                <img class="card-title" src="imagenes/clasesjapones-agenda.png" alt="Agendas rojas " />
+                <img class="card-title" src="imagenes/clasesjapones-agenda.png" alt="Agendas rojas" />
                 <p class="card-text">Clases 100% remota, disponemos de horarios flexibles que se ajustan a sus necesidades laborales y familiares. Con una hora semanal y práctica diaria se puede lograr grandes avances.</p>
               </div>
             </div>
           </div>
-          <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="col-md-6 nosotros__cards">
+          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 tarjeta__cartas" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <div class="card">
               <div class="card-body">
                 <img class="card-title" src="imagenes/clasesjapones-carta.png" alt="Banner rojo de inivitación para escribir cartas en japones" />
-                <p class="card-text">¡Tenemos alumnos de todo el mundo! Cada 2 semanas realizamos correspondencias entre alumnos de distintos países, de esta manera practicamos el idioma y además socialimos con otras culturas.</p>
+                <p class="card-text">Tenemos alumnos de todo el mundo! Cada 2 semanas realizamos correspondencias entre alumnos de distintos países, promoviendo un aprendizaje distinto, interactivo y social.</p>
               </div>
             </div>
           </div>
