--- a/subtitulos/japones.html
+++ b/subtitulos/japones.html
@@ -62,26 +62,26 @@
       </nav>
     </header>
     <main>
+      <div class="animate__slideInDown animate__animated anim japones__titulo"><h1>Japonés</h1></div>
       <!--               SECCION               -->
       <div class="container">
         <!--            PRIMER SECCION         -->
-        <section class="row">
-          <div class="col-12 text-center mb-5 animate__slideInDown animate__animated anim"><h1>Japonés</h1></div>
-          <article data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-6">
-            <h2>Clases de japones</h2>
+        <section class="row japonesUno">
+          <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesUno__texto" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <h2 class="japonesUno__titulo">Clases de japones</h2>
             <p>
               Clases o apoyo del idioma japonés en todos los niveles, desde cualquier parte del mundo de una manera súper sencilla, didáctica y divertida. Dictamos clases grupales de acuerdo a su nivel y personalizadas al objetivo al que estes
               aputando.
             </p>
           </article>
-          <div data-aos="zoom-in-left" data-aos-delay="200" data-aos-duration="1000" class="col-6"><img src="../imagenes/clasesjapones.jpg" alt="Libros de japones" width="100%" /></div>
+          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesUno__imagen" data-aos="zoom-in-left" data-aos-delay="200" data-aos-duration="1000"><img src="../imagenes/clasesjapones.jpg" alt="Libros de japones" width="100%" /></div>
         </section>
         <!--       SEGUNDA SECCION     -->
-        <section class="row mt-5">
-          <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="col-6">
+        <section class="row japonesDos">
+          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesDos__url" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <iframe
-              width="560"
-              height="315"
+              width="100%"
+              height="100%"
               src="https://www.youtube.com/embed/WQYYKG-UMII"
               title="YouTube video player"
               frameborder="0"
@@ -89,19 +89,21 @@
               allowfullscreen
             ></iframe>
           </div>
-          <article data-aos="fade-left" data-aos-delay="300" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-6 text-end">
-            <h2>Intuitivas</h2>
+          <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesDos__texto" data-aos="fade-left" data-aos-delay="300" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <h2 class="japonesDos__titulo">Intuitivas</h2>
             <p>Con mucha dinámica, juegos para romper con las tipícas clases aburridas y siempre con mucha energía para prosperar día a día en el estudio.</p>
           </article>
         </section>
         <!--      TERCER SECCION     -->
-        <section class="row mt-5">
-          <article data-aos="fade-right" data-aos-delay="300" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-6 japones__tercerseccion">
-            <h2>Clases de Manga</h2>
+        <section class="row japonesTres">
+          <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesTres__texto" data-aos="fade-right" data-aos-delay="300" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <h2 class="japonesTres__titulo">Clases de Manga</h2>
             <p>Te interesa el mundo del manga y del anime?</p>
             <span>Enseñamos desde la estructura básica de los clásicos mangas del 90' hasta los novedosos y estilizados diseños contemporáneos</span>
           </article>
-          <div data-aos="zoom-in-left" data-aos-delay="400" data-aos-duration="1300" class="col-6"><img src="../imagenes/clasesjapones-manga.jpg" alt="clases de manga" width="100%" /></div>
+          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesTres__imagen" data-aos="zoom-in-left" data-aos-delay="400" data-aos-duration="1300">
+            <img src="../imagenes/clasesjapones-manga.jpg" alt="clases de manga" width="100%" />
+          </div>
         </section>
       </div>
     </main>
