--- a/subtitulos/viajes.html
+++ b/subtitulos/viajes.html
@@ -88,10 +88,10 @@
           </button>
         </div>
       </div>
-      <section class="container mt-5">
+      <section class="container">
         <div class="row">
-          <div data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="300" class="col"><img src="../imagenes/viajes.jpg" alt="Beca japon" width="70%" /></div>
-          <article data-aos="fade-up-left" data-aos-duration="1000" data-aos-delay="300" class="col">
+          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="300"><img src="../imagenes/viajes.jpg" alt="Beca japon" width="70%" /></div>
+          <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-up-left" data-aos-duration="1000" data-aos-delay="300">
             <div><h2>Becas</h2></div>
             <div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil minima, porro totam quas rerum nemo, atque illo at ex nostrum natus pariatur ipsam, libero non vero iure debitis. Quas?</p>
