--- a/index.html
+++ b/index.html
@@ -63,43 +63,41 @@
     </header>
     <main>
       <!--        PRIMER SECTION      -->
-      <section class="container-fluid sectionUno">
+      <section class="container-fluid sectionUno" data-aos="fade-left" data-aos-delay="300" data-aos-offset="500" data-aos-duration="700">
         <div class="row">
-          <div class="col col-12 col-md-5 col-sm-12 sectionUno__imagen animate__rotateInDownLeft animate__animated animate__delay-1s">
+          <div class="col col-12 col-md-5 col-sm-12 sectionUno__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
             <img src="imagenes/daruma-rojo.png" alt="Daruma rojo" />
           </div>
           <article class="col col-12 col-md-7 col-sm-12 sectionUno__texto">
-            <h1 data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">Daruma</h1>
-            <p class="animate__rotateInUpRight animate__animated animate__delay-1s">
-              El muñeco daruma (達磨) es uno de los amuletos japoneses más conocidos, un muñeco de los propósitos hecho a mano que nos ayuda a conseguir todo aquello que nos propongamos.
-            </p>
-            <button type="button" class="btn btn-primary animate__flipInX animate__animated animate__delay-2s"><a href="subtitulos/daruma.html">Ver más</a></button>
+            <h1>Daruma</h1>
+            <p>El muñeco daruma (達磨) es uno de los amuletos japoneses más conocidos, un muñeco de los propósitos hecho a mano que nos ayuda a conseguir todo aquello que nos propongamos.</p>
+            <button type="button" class="btn btn-primary"><a href="subtitulos/daruma.html">Ver más</a></button>
           </article>
         </div>
       </section>
       <!--       SEGUNDO SECTION      -->
-      <section class="container-fluid sectionDos">
+      <section class="container-fluid sectionDos" data-aos="fade-right" data-aos-offset="500" data-aos-duration="700">
         <div class="row">
           <article class="col col-12 col-md-8 col-sm-12 sectionDos__texto">
-            <div class="sectionDos__titulo" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100"><h1>Omamori</h1></div>
-            <p data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="300">Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
+            <div class="sectionDos__titulo"><h1>Omamori</h1></div>
+            <p>Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
             <div class="sectionDos__boton">
-              <button type="button" class="btn btn-primary animate__flipInX animate__animated animate__delay-2s"><a href="subtitulos/omamori.html">Ver más</a></button>
+              <button type="button" class="btn btn-primary"><a href="subtitulos/omamori.html">Ver más</a></button>
             </div>
           </article>
-          <div class="col col-12 col-md-4 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+          <div class="col col-12 col-md-4 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
             <img src="imagenes/amuleto-amor.png" alt="Amuleto amor" />
           </div>
         </div>
       </section>
       <!--        TERCER SECTION       -->
-      <section class="container-fluid sectionTres">
+      <section class="container-fluid sectionTres" data-aos="fade-left" data-aos-offset="500" data-aos-duration="700">
         <div class="row">
-          <div class="col col-12 col-md-6 col-sm-12 sectionTres__imagen" data-aos="zoom-in-right" data-aos-duration="1000" data-aos-delay="500"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
+          <div class="col col-12 col-md-6 col-sm-12 sectionTres__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
           <article class="col col-12 col-md-6 col-sm-12 sectionTres__texto">
-            <div class="sectionTres__titulo" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100"><h1>Japones</h1></div>
-            <p data-aos="zoom-in-left" data-aos-duration="1000" data-aos-delay="500">Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
-            <button type="button" class="btn btn-primary animate__flipInX animate__animated animate__delay-2s"><a href="subtitulos/japones.html">Ver más</a></button>
+            <div class="sectionTres__titulo"><h1>Japones</h1></div>
+            <p>Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
+            <button type="button" class="btn btn-primary"><a href="subtitulos/japones.html">Ver más</a></button>
           </article>
         </div>
       </section>
