modifique el footer y acomode el tiempo de algunas animaciones

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <main>
       <!--        PRIMER SECTION      -->
-      <section class="container-fluid sectionUno" data-aos="fade-left" data-aos-delay="300" data-aos-offset="500" data-aos-duration="700">
+      <section class="container-fluid sectionUno" data-aos="fade-left" data-aos-delay="200" data-aos-offset="500" data-aos-duration="500">
         <div class="row">
           <div class="col col-12 col-md-5 col-sm-12 sectionUno__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
             <img src="imagenes/daruma-rojo.png" alt="Daruma rojo" />
@@ -76,22 +76,22 @@
         </div>
       </section>
       <!--       SEGUNDO SECTION      -->
-      <section class="container-fluid sectionDos" data-aos="fade-right" data-aos-offset="500" data-aos-duration="700">
+      <section class="container-fluid sectionDos" data-aos="fade-right" data-aos-offset="500" data-aos-duration="500">
         <div class="row">
-          <article class="col col-12 col-md-8 col-sm-12 sectionDos__texto">
+          <article class="col col-12 col-md-7 col-sm-12 sectionDos__texto">
             <div class="sectionDos__titulo"><h1>Omamori</h1></div>
             <p>Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
             <div class="sectionDos__boton">
               <button type="button" class="btn btn-primary"><a href="subtitulos/omamori.html">Ver más</a></button>
             </div>
           </article>
-          <div class="col col-12 col-md-4 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
+          <div class="col col-12 col-md-5 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
             <img src="imagenes/amuleto-amor.png" alt="Amuleto amor" />
           </div>
         </div>
       </section>
       <!--        TERCER SECTION       -->
-      <section class="container-fluid sectionTres" data-aos="fade-left" data-aos-offset="500" data-aos-duration="700">
+      <section class="container-fluid sectionTres" data-aos="fade-left" data-aos-offset="500" data-aos-duration="500">
         <div class="row">
           <div class="col col-12 col-md-6 col-sm-12 sectionTres__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
           <article class="col col-12 col-md-6 col-sm-12 sectionTres__texto">
@@ -102,20 +102,51 @@
         </div>
       </section>
     </main>
-    <!--       FOOTER      -->
-    <footer class="bg-light text-center text-white">
-      <div class="container p-4 pb-4">
-        <section class="mb-3">
-          <a class="btn btn--facebook btn-white btn-floating mx-3" href="https://www.facebook.com" role="button"><i class="bi-facebook logo_texto--color"></i></a>
-          <a class="btn btn--linkedin btn-white btn-floating mx-3" href="https://www.linkedin.com" role="button"><i class="bi-linkedin logo_texto--color"></i></a>
-          <a class="btn btn--twitter btn-white btn-floating mx-3" href="https://www.twitter.com" role="button"><i class="bi-twitter logo_texto--color"></i></a>
-          <a class="btn btn--instagram btn-white btn-floating mx-3" href="https://www.instagram.com" role="button"><i class="bi-instagram logo_texto--color"></i></a>
-          <a class="btn btn--youtube btn-white btn-floating mx-3" href="https://www.youtube.com" role="button"><i class="bi-youtube logo_texto--color"></i></a>
-          <a class="btn btn--email btn-white btn-floating mx-3" href="https://www.gmail.com" role="button"><i class="bi-envelope logo_texto--color"></i></a>
-        </section>
-      </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
-    </footer>
+    <div>
+      <!-- Footer -->
+      <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+        <div class="container p-4 pb-0">
+          <section class="">
+            <div class="row">
+              <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
+                <p><a href="index.html">Home</a></p>
+                <p><a href="nosotros.html">Nosotros</a></p>
+                <p><a href="contacto.html">Contáctanos</a></p>
+              </div>
+              <hr class="w-100 clearfix d-md-none" />
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+                <p>
+                  <a href="subtitulos/daruma.html" class="text-white">Daruma</a>
+                </p>
+                <p>
+                  <a href="subtitulos/omamori.html" class="text-white">Omamori</a>
+                </p>
+                <p>
+                  <a href="subtitulos/japones.html" class="text-white">Japones</a>
+                </p>
+              </div>
+              <hr class="w-100 clearfix d-md-none" />
+              <hr class="w-100 clearfix d-md-none" />
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+                <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Buenos Aires</p>
+                <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
+                <p><i class="fas fa-phone mr-3"></i> + 54 11 0303456</p>
+              </div>
+              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
+                <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com" role="button"><i class="bi-facebook logo_texto--color"></i></a>
+                <a class="btn btn--instagram btn-floating m-1" href="https://wwwwinstagram.com" role="button"><i class="bi-instagram logo_texto--color"></i></a>
+                <a class="btn btn--linkedin btn-floating m-1" href="www.linkedin.com" role="button"><i class="bi-linkedin logo_texto--color"></i></a>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
+      </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="aos.js"></script>
