--- a/productos.html
+++ b/productos.html
@@ -48,19 +48,61 @@
         </div>
       </nav>
     </header>
-    <!--         FOOTER      -->
-    <footer class="bg-light text-center text-white">
-      <div class="container p-5 pb-5">
-        <section class="mb-4">
-          <a class="btn btn-white btn-floating mx-3" style="background-color: #3b5998" href="https://www.facebook.com" role="button"><i class="bi-facebook" style="color: white"></i></a>
-          <a class="btn btn-white btn-floating mx-3" style="background-color: #55acee" href="https://www.twitter.com" role="button"><i class="bi-twitter" style="color: white"></i></a>
-          <a class="btn btn-white btn-floating mx-3" style="background-color: #dd4b39" href="https://www.gmail.com" role="button"><i class="bi-envelope" style="color: white"></i></a>
-          <a class="btn btn-white btn-floating mx-3" style="background-color: #ac2bac" href="https://www.instagram.com" role="button"><i class="bi-instagram" style="color: white"></i></a>
-          <a class="btn btn-white btn-floating mx-3" style="background-color: #0082ca" href="https://www.linkedin.com" role="button"><i class="bi-linkedin" style="color: white"></i></a>
-        </section>
-      </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
-    </footer>
+
+    <div class="my-5">
+      <!-- Footer -->
+      <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+        <div class="container p-4 pb-0">
+          <section class="">
+            <div class="row">
+              <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
+                <p><a href="index.html">Home</a></p>
+                <p><a href="nosotros.html">Nosotros</a></p>
+                <p><a href="contacto.html">Contáctanos</a></p>
+              </div>
+
+              <hr class="w-100 clearfix d-md-none" />
+
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+                <p>
+                  <a class="text-white">Darumaa</a>
+                </p>
+                <p>
+                  <a class="text-white">Omamori</a>
+                </p>
+                <p>
+                  <a class="text-white">Japones</a>
+                </p>
+              </div>
+
+              <hr class="w-100 clearfix d-md-none" />
+
+              <hr class="w-100 clearfix d-md-none" />
+
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+                <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Buenos Aires</p>
+                <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
+                <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+              </div>
+
+              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
+
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com" role="button"><i class="bi-facebook logo_texto--color"></i></a>
+
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://wwwwinstagram.com" role="button"><i class="bi-instagram logo_texto--color"></i></a>
+
+                <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="www.linkedin.com" role="button"><i class="bi-linkedin logo_texto--color"></i></a>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
+      </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
   </body>
 </html>
