ajuste el height del p dentro de las cards de omamori.html y daruma.html

--- a/subtitulos/omamori.html
+++ b/subtitulos/omamori.html
@@ -70,7 +70,7 @@
             <img src="../imagenes/amuleto-viajeseguro.png" class="card-img-top" alt="Amuleto rojo" />
             <div class="card-body">
               <h5 class="card-title">Viaje Seguro</h5>
-              <p class="card-text">Kōtsū Anzen</p>
+              <h6 >Kōtsū Anzen</h6>
               <p class="card-text">Es el omamori perfecto para los conductores y los viajeros, que busca protegerlos de todo tipo de accidentes.</p>
               <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
               <a href="#" class="btn btn-secondary">Agregar al carrito</a>
@@ -80,7 +80,7 @@
             <img src="../imagenes/amuleto-amor.png" class="card-img-top" alt="Amuleto rosa" />
             <div class="card-body">
               <h5 class="card-title">Amor</h5>
-              <p class="card-text">Rennai Jouju</p>
+              <h6>Rennai Jouju</h6>
               <p class="card-text">Ideal para aquellos/as que quieren encontrar pareja.</p>
               <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
               <a href="#" class="btn btn-secondary">Agregar al carrito</a>
@@ -90,6 +90,7 @@
             <img src="../imagenes/amuleto-nina.png" class="card-img-top" alt="Amuleto rosa claro" />
             <div class="card-body">
               <h5 class="card-title">Niña</h5>
+              <h6>Onna no ko</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
               <a href="#" class="btn btn-secondary">Agregar al carrito</a>
@@ -99,7 +100,7 @@
             <img src="../imagenes/amuleto-familia.png" class="card-img-top" alt="Amuleto dorado con bordo" />
             <div class="card-body">
               <h5 class="card-title">Familia</h5>
-              <p class="card-text">Kanai Anzen</p>
+              <h6>Kanai Anzen</h6>
               <p class="card-text">Amuleto que trae paz y prosperidad al hogar familiar y a todos sus integrantes.</p>
               <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
               <a href="#" class="btn btn-secondary">Agregar al carrito</a>
@@ -109,7 +110,7 @@
             <img src="../imagenes/amuleto-estudio.png" class="card-img-top" alt="Amuleto violeta con dorado" />
             <div class="card-body">
               <h5 class="card-title">Estudio</h5>
-              <p class="card-text">Gakugyō</p>
+              <h6>Gakugyō</h6>
               <p class="card-text">Busca darnos suerte en los estudios y en los exámenes. Si tenes un amigo/a a punto de rendir, este es un regalo ideal.</p>
               <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
               <a href="#" class="btn btn-secondary">Agregar al carrito</a>
@@ -119,7 +120,7 @@
             <img src="../imagenes/amuleto-salud.png" class="card-img-top" alt="Amuleto azul oscuro con lineas doradas" />
             <div class="card-body">
               <h5 class="card-title">Salud</h5>
-              <p class="card-text">Kenko</p>
+              <h6>Kenko</h6>
               <p class="card-text">Omamori que nos protege de las enfermedades para asegurarnos una vida llena de salud.</p>
               <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
               <a href="#" class="btn btn-secondary">Agregar al carrito</a>
@@ -129,6 +130,7 @@
             <img src="../imagenes/amuleto-nino.png" class="card-img-top" alt="Amuleto celeste" />
             <div class="card-body">
               <h5 class="card-title">Niño</h5>
+              <h6>Kodomo no ko</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
               <a href="#" class="btn btn-secondary">Agregar al carrito</a>
@@ -138,7 +140,7 @@
             <img src="../imagenes/amuleto-negocios.png" class="card-img-top" alt="Amuleto verde con rayas blancas" />
             <div class="card-body">
               <h5 class="card-title">Negocios</h5>
-              <p class="card-text">Shōbai Hanjō</p>
+              <h6>Shōbai Hanjō</h6>
               <p class="card-text">Amuleto perfecto para conseguir éxito en un negocio y cuidar así nuestra situación laboral y económica.</p>
               <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
               <a href="#" class="btn btn-secondary">Agregar al carrito</a>
