--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -66,7 +66,7 @@
       <h1 class="darumas__titulo animate__slideInDown animate__animated">Daruma</h1>
       <div class="container darumas">
         <div class="row row-cols-3 row-cols-md-3 g-4">
-          <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
+          <div class="card col-md-3" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000"  style="width: 18rem">
             <img src="../imagenes/daruma-rojo.png" class="card-img-top" alt="Daruma rojo" />
             <div class="card-body">
               <h5 class="card-title">Daruma rojo</h5>
