modifique links para que re redirigan a 404 error y acomode margins

--- a/404.html
+++ b/404.html
@@ -59,16 +59,54 @@
         </div>
       </nav>
     </header>
-    <!--    FOOTER    -->
-    <footer class="bg-light text-center text-white">
-      <div class="container p-4 pb-4">
-        <section class="mb-3">
-          <a class="btn btn--facebook btn-white btn-floating mx-3" href="https://www.facebook.com" role="button"><i class="bi-facebook logo_texto--color"></i></a>
-          <a class="btn btn--linkedin btn-white btn-floating mx-3" href="https://www.linkedin.com" role="button"><i class="bi-linkedin logo_texto--color"></i></a>
-          <a class="btn btn--twitter btn-white btn-floating mx-3" href="https://www.twitter.com" role="button"><i class="bi-twitter logo_texto--color"></i></a>
-          <a class="btn btn--instagram btn-white btn-floating mx-3" href="https://www.instagram.com" role="button"><i class="bi-instagram logo_texto--color"></i></a>
-          <a class="btn btn--youtube btn-white btn-floating mx-3" href="https://www.youtube.com" role="button"><i class="bi-youtube logo_texto--color"></i></a>
-          <a class="btn btn--email btn-white btn-floating mx-3" href="https://www.gmail.com" role="button"><i class="bi-envelope logo_texto--color"></i></a>
+    <main>
+      <div class="error">
+        <div class="error__texto">
+          <div class="error__titulo"><h1>404 Error</h1></div>
+          <div class="error__subtitulo"><h2>Page not found</h2></div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+      <div class="container p-4 pb-0">
+        <section class="">
+          <div class="row">
+            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
+              <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
+              <p><a href="../index.html">Home</a></p>
+              <p><a href="../nosotros.html">Nosotros</a></p>
+              <p><a href="../contacto.html">Contáctanos</a></p>
+            </div>
+            <hr class="w-100 clearfix d-md-none" />
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
+              <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+              <p>
+                <a href="daruma.html" class="text-white">Daruma</a>
+              </p>
+              <p>
+                <a href="omamori.html" class="text-white">Omamori</a>
+              </p>
+              <p>
+                <a href="japones.html" class="text-white">Japones</a>
+              </p>
+            </div>
+            <hr class="w-100 clearfix d-md-none" />
+            <hr class="w-100 clearfix d-md-none" />
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
+              <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+              <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Buenos Aires</p>
+              <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
+              <p><i class="fas fa-phone mr-3"></i> + 54 11 0303456</p>
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+              <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
+              <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com" role="button"><i class="bi-facebook logo_texto--color"></i></a>
+              <a class="btn btn--instagram btn-floating m-1" href="https://wwwwinstagram.com" role="button"><i class="bi-instagram logo_texto--color"></i></a>
+              <a class="btn btn--linkedin btn-floating m-1" href="www.linkedin.com" role="button"><i class="bi-linkedin logo_texto--color"></i></a>
+            </div>
+          </div>
         </section>
       </div>
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
