--- a/contacto.html
+++ b/contacto.html
@@ -61,9 +61,9 @@
     </header>
     <main>
       <!--       MAPA & FORM        -->
-      <div class="container">
+      <div class="container contacto">
         <div class="row g-3">
-          <div class="col-12 text-center"><h2>Contáctanos por más información</h2></div>
+          <div class="col-12 contacto__titulo"><h2>Contáctanos por más información</h2></div>
           <iframe
             class="col px-2 m-2 pt-3 pb-5"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52442.0071688614!2d-58.45486143981961!3d-34.76502683686067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd261abf8fb75%3A0xd3b4119f62723032!2sLomas%20de%20Zamora%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1621783852236!5m2!1ses-419!2sar"
