--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -71,8 +71,8 @@
             <div class="card-body">
               <h5 class="card-title">Daruma rojo</h5>
               <p class="card-text">Para la buena suerte, la felicidad, el miedo, la ira y el sol.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -80,8 +80,8 @@
             <div class="card-body">
               <h5 class="card-title">Daruma verde</h5>
               <p class="card-text">Vitalidad. Mejorar la salud y la condición física.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -89,8 +89,8 @@
             <div class="card-body">
               <h5 class="card-title">Daruma azul</h5>
               <p class="card-text">Trabajo o escuela. Representa la calma, la confianza, la tranquilidad, la honestidad.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -98,8 +98,8 @@
             <div class="card-body">
               <h5 class="card-title">Daruma negro</h5>
               <p class="card-text">Seguridad. Está diseñado para prevenir desastres naturales, o cualquier otro mal.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
         </div>
