--- a/subtitulos/viajes.html
+++ b/subtitulos/viajes.html
@@ -62,9 +62,8 @@
       </nav>
     </header>
     <main>
+      <div class="animate__slideInDown animate__animated viajes__titulo"><h1>Viajes</h1></div>
       <!--        CARRUSEL       -->
-      <div class="animate__slideInDown animate__animated"><h1>Viajes</h1></div>
-
       <div class="container carousel animate__fadeInUp animate__animated animate__delay-1s">
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
           <div class="carousel-inner">
@@ -88,11 +87,12 @@
           </button>
         </div>
       </div>
-      <section class="container">
+      <!--    BECAS         -->
+      <section class="container becas">
         <div class="row">
-          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="300"><img src="../imagenes/viajes.jpg" alt="Beca japon" width="70%" /></div>
-          <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-up-left" data-aos-duration="1000" data-aos-delay="300">
-            <div><h2>Becas</h2></div>
+          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 becas__imagen" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="300"><img src="../imagenes/viajes.jpg" alt="Beca japon" width="70%" /></div>
+          <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 becas__texto" data-aos="fade-up-left" data-aos-duration="1000" data-aos-delay="300">
+            <div class="becas__titulo"><h2>Becas</h2></div>
             <div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil minima, porro totam quas rerum nemo, atque illo at ex nostrum natus pariatur ipsam, libero non vero iure debitis. Quas?</p>
             </div>
