--- a/subtitulos/japones.html
+++ b/subtitulos/japones.html
@@ -98,8 +98,8 @@
         <section class="row japonesTres">
           <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesTres__texto" data-aos="fade-right" data-aos-delay="300" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <h2 class="japonesTres__titulo">Clases de Manga</h2>
-            <p>Te interesa el mundo del manga y del anime?</p>
-            <span>Enseñamos desde la estructura básica de los clásicos mangas del 90' hasta los novedosos y estilizados diseños contemporáneos</span>
+            <h4>Te interesa el mundo del manga y del anime?</h3>
+            <p>Enseñamos desde la estructura básica de los clásicos mangas del 90' hasta los novedosos y estilizados diseños contemporáneos.</p>
           </article>
           <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesTres__imagen" data-aos="zoom-in-left" data-aos-delay="400" data-aos-duration="1300">
             <img src="../imagenes/clasesjapones-manga.jpg" alt="clases de manga" width="100%" />
