--- a/subtitulos/omamori.html
+++ b/subtitulos/omamori.html
@@ -72,8 +72,8 @@
               <h5 class="card-title">Viaje Seguro</h5>
               <h6 >Kōtsū Anzen</h6>
               <p class="card-text">Es el omamori perfecto para los conductores y los viajeros, que busca protegerlos de todo tipo de accidentes.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -82,18 +82,18 @@
               <h5 class="card-title">Amor</h5>
               <h6>Rennai Jouju</h6>
               <p class="card-text">Ideal para aquellos/as que quieren encontrar pareja.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
             <img src="../imagenes/amuleto-nina.png" class="card-img-top" alt="Amuleto rosa claro" />
             <div class="card-body">
               <h5 class="card-title">Niña</h5>
-              <h6>Onna no ko</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <h6>Kodomo Mori</h6>
+              <p class="card-text">Este Omamori es para niñas. Es una bendición para la seguridad, la salud y el estudio de un niña.</p>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -102,8 +102,8 @@
               <h5 class="card-title">Familia</h5>
               <h6>Kanai Anzen</h6>
               <p class="card-text">Amuleto que trae paz y prosperidad al hogar familiar y a todos sus integrantes.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -112,8 +112,8 @@
               <h5 class="card-title">Estudio</h5>
               <h6>Gakugyō</h6>
               <p class="card-text">Busca darnos suerte en los estudios y en los exámenes. Si tenes un amigo/a a punto de rendir, este es un regalo ideal.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -122,18 +122,18 @@
               <h5 class="card-title">Salud</h5>
               <h6>Kenko</h6>
               <p class="card-text">Omamori que nos protege de las enfermedades para asegurarnos una vida llena de salud.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
             <img src="../imagenes/amuleto-nino.png" class="card-img-top" alt="Amuleto celeste" />
             <div class="card-body">
               <h5 class="card-title">Niño</h5>
-              <h6>Kodomo no ko</h6>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <h6>Kodomo Mori</h6>
+              <p class="card-text">Este Omamori es para niños. Es una bendición para la seguridad, la salud y el estudio de un niño.</p>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -142,8 +142,8 @@
               <h5 class="card-title">Negocios</h5>
               <h6>Shōbai Hanjō</h6>
               <p class="card-text">Amuleto perfecto para conseguir éxito en un negocio y cuidar así nuestra situación laboral y económica.</p>
-              <p><a href="#" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="#" class="btn btn-secondary">Agregar al carrito</a>
+              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
+              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
         </div>
