acomode el index

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="row">
           <article class="col col-12 col-md-7 col-sm-12 sectionDos__texto">
             <div class="sectionDos__titulo"><h1>Omamori</h1></div>
-            <p>Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
+            <p>Es otro popular amuleto japonés, una especie de colgante hecho de tela, cuyo objetivo fundamental es proteger y dar fortuna a los que lo llevan.</p>
             <div class="sectionDos__boton">
               <button type="button" class="btn btn-primary"><a href="subtitulos/omamori.html">Ver más</a></button>
             </div>
@@ -93,8 +93,8 @@
       <!--        TERCER SECTION       -->
       <section class="container-fluid sectionTres" data-aos="fade-left" data-aos-offset="250" data-aos-duration="500">
         <div class="row">
-          <div class="col col-12 col-md-6 col-sm-12 sectionTres__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
-          <article class="col col-12 col-md-6 col-sm-12 sectionTres__texto">
+          <div class="col col-12 col-md-5 col-sm-12 sectionTres__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
+          <article class="col col-12 col-md-7 col-sm-12 sectionTres__texto">
             <div class="sectionTres__titulo"><h1>Japones</h1></div>
             <p>Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
             <button type="button" class="btn btn-primary"><a href="subtitulos/japones.html">Ver más</a></button>
