--- a/index.html
+++ b/index.html
@@ -120,23 +120,24 @@
                 <p>
                   <a href="subtitulos/daruma.html" class="text-white">Daruma</a>
                 </p>
-                <p>
-                  <a href="subtitulos/omamori.html" class="text-white">Omamori</a>
-                </p>
+
                 <p>
                   <a href="subtitulos/japones.html" class="text-white">Japones</a>
+                </p>
+                <p>
+                  <a href="subtitulos/omamori.html" class="text-white">Omamori</a>
                 </p>
               </div>
               <hr class="w-100 clearfix d-md-none" />
               <hr class="w-100 clearfix d-md-none" />
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-                <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Buenos Aires</p>
+                <p><i class="fas fa-phone mr-3"></i> +54 11 0303456</p>
+                <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Bs As</p>
                 <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
-                <p><i class="fas fa-phone mr-3"></i> + 54 11 0303456</p>
               </div>
               <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
+                <h6 class="text-uppercase mb-4 font-weight-bold">Redes Sociales</h6>
                 <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com" role="button"><i class="bi-facebook logo_texto--color"></i></a>
                 <a class="btn btn--instagram btn-floating m-1" href="https://wwwwinstagram.com" role="button"><i class="bi-instagram logo_texto--color"></i></a>
                 <a class="btn btn--linkedin btn-floating m-1" href="www.linkedin.com" role="button"><i class="bi-linkedin logo_texto--color"></i></a>
